# timeseriescleaner

./: clean_project_data_v4_final.py  pyproject.toml
.github/workflows/: main.yml
src/timeseriescleaner/: __init__.py  main.py
src/timeseriescleaner/module1/: clean_flat.py  clean_outofrange.py  clean_spikes.py  main.py  plot_timeseries.py
src/timeseriescleaner/module2/: cleaning.py  main.py  plotting.py
src/timeseriescleaner/module3/: pyproject.toml
src/timeseriescleaner/module3/notebooks/: notebook_A copy.ipynb
src/timeseriescleaner/module3/src/tscleaner/: __init__.py  main.py  notebook_A copy.ipynb
src/timeseriescleaner/module3/tests/: test_cleaning.py
