[project]
name = "timeseriescleaner"
version = "0.1.0"
description = "Time series cleaner project"
readme = "README.md"
authors = [
    { name = "ellinihemakumar", email = "44695711+ellinihemakumar@users.noreply.github.com" }
]
requires-python = ">=3.9"
dependencies = [ "matplotlib>=3.9.4",
    "pandas>=2.3.2",]

[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"
