[project]
name = "tscleaner"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Mike Water", email = "xyz@dhigroup.com" }
]
requires-python = ">=3.13"
dependencies = [
    "matplotlib",
    "numpy",
    "pandas>=2.3.2",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-cov",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
[tool.setuptools]
package-dir = {"" = "src"}